refactor(page): 增加个人小工具页面的 description 说明

--- a/src/layouts/ProjectsPage.astro
+++ b/src/layouts/ProjectsPage.astro
@@ -1,21 +1,22 @@
 ---
 import type { MarkdownHeading } from 'astro'
 
-import TOC from '@/components/custom/TOC.astro'
 import PageLayout from '@/layouts/ContentLayout.astro'
+import TOC from '@/components/custom/TOC.astro'
 import { Comment, PageInfo } from '@/components/waline'
 
 interface Props {
   title: string
+  description: string
   headings?: MarkdownHeading[]
   view?: boolean
   comment?: boolean
 }
 
-const { title, headings, view, comment: enableComment, ...props } = Astro.props
+const { title, description, headings, view, comment: enableComment, ...props } = Astro.props
 ---
 
-<PageLayout meta={{ title }} back="/projects" {...props}>
+<PageLayout meta={{ title, description }} back='/projects' {...props}>
   {headings?.length && <TOC headings={headings} slot='sidebar' />}
 
   <Fragment slot='header'>
