--- a/src/pages/projects/item/avatar-service.astro
+++ b/src/pages/projects/item/avatar-service.astro
@@ -9,9 +9,12 @@ const headings = [
   { depth: 2, slug: 'pixel', text: '像素方块风格' },
   { depth: 2, slug: 'motivation', text: '制作初衷' }
 ]
+
+const description =
+  '轻量级随机头像生成服务。用户可通过访问接口，使用指定的 seed 自动生成唯一的头像图像'
 ---
 
-<PageLayout title='随机头像生成' {headings} comment>
+<PageLayout title='随机头像生成' {description} {headings} comment>
   <p>一个用 Go 写的随机头像生成服务，支持多种风格的头像生成</p>
   <p>适合个人项目展示、应用注册头像生成、趣味工具等场景</p>
 
@@ -39,9 +42,21 @@ const headings = [
   {/* motivation */}
   <h2 id='motivation'>制作初衷</h2>
   <p>做这个项目的初衷其实很简单，也有一点好玩：</p>
-  <p>在各种平台上，新注册用户都会被分配一个默认头像。但当你看到评论区、留言板或者排行榜上，一堆一模一样的默认头像排在一起，总觉得缺少个性，也少了点“乐趣”。</p>
-  <p>当然，你可以让用户去上传自己的头像，但大多数人懒得去换，这让默认头像的重要性显得更高。于是我就想，能不能让默认头像也有点个性呢？</p>
-  <p>在思考的过程中，我想到了 GitHub 的默认头像。每个用户的头像都不一样，但又有统一风格，看起来既生动又有秩序。出于好奇，我研究了一下它的生成方式，然后顺手用 Go 实现了一个类似的功能。</p>
-  <p>这个项目本身很小，但过程很有趣：每次输入一个名字，都能生成一个独一无二的头像，就像拆盲盒一样。我希望它不仅能让页面更生动，也能给自己带来一点折腾的乐趣，同时顺便练练手。</p>
-  <p>未来，我还有一些扩展想法，比如把头像从抽象方块升级为简笔风格的人物头像，加入头发、眼睛、饰品等元素，通过随机组合生成更多变化，让每个默认头像都更有趣、更有特色。</p>
+  <p>
+    在各种平台上，新注册用户都会被分配一个默认头像。但当你看到评论区、留言板或者排行榜上，一堆一模一样的默认头像排在一起，总觉得缺少个性，也少了点“乐趣”。
+  </p>
+  <p>
+    当然，你可以让用户去上传自己的头像，但大多数人懒得去换，这让默认头像的重要性显得更高。于是我就想，能不能让默认头像也有点个性呢？
+  </p>
+  <p>
+    在思考的过程中，我想到了 GitHub
+    的默认头像。每个用户的头像都不一样，但又有统一风格，看起来既生动又有秩序。出于好奇，我研究了一下它的生成方式，然后顺手用
+    Go 实现了一个类似的功能。
+  </p>
+  <p>
+    这个项目本身很小，但过程很有趣：每次输入一个名字，都能生成一个独一无二的头像，就像拆盲盒一样。我希望它不仅能让页面更生动，也能给自己带来一点折腾的乐趣，同时顺便练练手。
+  </p>
+  <p>
+    未来，我还有一些扩展想法，比如把头像从抽象方块升级为简笔风格的人物头像，加入头发、眼睛、饰品等元素，通过随机组合生成更多变化，让每个默认头像都更有趣、更有特色。
+  </p>
 </PageLayout>
