--- a/src/pages/projects/item/finance.astro
+++ b/src/pages/projects/item/finance.astro
@@ -7,11 +7,14 @@ const headings = [
   { depth: 2, slug: 'achievements', text: '项目成果' },
   { depth: 2, slug: 'development', text: '项目发展' }
 ]
+
+const description = ''
 ---
 
-<PageLayout title='跨境金融系统' {headings} comment>
+<PageLayout title='跨境金融系统' {description} {headings} comment>
   <p>
-    一个综合性的金融科技平台，基于高性能的 Webman 框架构建，为现代金融应用提供强大的借贷服务、风险管理和支付处理能力
+    一个综合性的金融科技平台，基于高性能的 Webman
+    框架构建，为现代金融应用提供强大的借贷服务、风险管理和支付处理能力
   </p>
 
   {/* introduction */}
