refactor(about): 完善关于我页面内容

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -3,16 +3,16 @@ import { Button, Timeline } from 'astro-pure/user'
 import PageLayout from '@/layouts/CommonPage.astro'
 import Metrics from '@/components/about/Metrics.astro'
 import ToolSection from '@/components/about/ToolSection.astro'
-import TVwallCard from '@/components/entertainment/TVwallCard.astro'
 import GameWallCard from '@/components/entertainment/GameWallCard.astro'
+import TVwallCard from '@/components/entertainment/TVwallCard.astro'
 
 const headings = [
   { depth: 2, slug: 'hobbies', text: '我的兴趣' },
   { depth: 2, slug: 'my-job', text: '我的工作' },
   { depth: 2, slug: 'my-skills', text: '我的技能' },
-  { depth: 2, slug: 'access-statistics', text: '访问统计' },
-  { depth: 2, slug: 'my-anime', text: '我的追番' },
-  { depth: 2, slug: 'my-game', text: '最近在玩' }
+  { depth: 2, slug: 'my-game', text: '我的游戏墙' },
+  { depth: 2, slug: 'my-anime', text: '我的追番墙' },
+  { depth: 2, slug: 'access-statistics', text: '访问统计' }
 ]
 ---
 
@@ -246,18 +246,18 @@ const headings = [
     ]}
   />
 
+  {/* my-game */}
+  <h2 id='my-game'>我的游戏墙</h2>
+  <p>大多是单机作品，慢慢打，不追进度。<br />更在意体验，而不是通关速度。</p>
+  <GameWallCard title='PS5游戏列表' baseurl='https://cdn.hejunjie.life/game/' limit={8} />
+
+  {/* my-anime */}
+  <h2 id='my-anime'>我的追番墙</h2>
+  <p>更新就追，完结就补。<br />不算高强度，有时间就会去找点看。</p>
+  <TVwallCard title='追番列表' baseurl='https://cdn.hejunjie.life/tmdb/' limit={8} />
+
   {/* access-statistics */}
   <h2 id='access-statistics'>访问统计</h2>
   <p>数据不重要，但我还是想看看</p>
   <Metrics />
-
-  {/* my-anime */}
-  <h2 id='my-anime'>我的追番</h2>
-  <p>更新就追，完结就补。<br>不算高强度，有时间就会去找点看。</p>
-  <TVwallCard title='追番列表' baseurl='https://cdn.hejunjie.life/tmdb/' limit={8} />
-
-  {/* my-game */}
-  <h2 id='my-game'>最近在玩</h2>
-  <p>大多是单机作品，慢慢打，不追进度。<br>更在意体验，而不是通关速度。</p>
-  <GameWallCard title='PS5游戏列表' baseurl='https://cdn.hejunjie.life/game/' limit={8} />
 </PageLayout>
