--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -50,62 +50,62 @@ const { sponsorship } = sponsorshipData
         name: 'B站弹幕机器人&积分商城',
         description: '基于 PHP 实现的 B 站弹幕机器人 + 积分商城，支持 Docker 一键部署',
         links: [
-          { type: 'doc', href: '/danmusuite' },
-          { type: 'github', href: 'https://github.com/zxc7563598/php-bilibili-danmu' }
+          { type: 'doc', href: '/danmusuite', title: '查看文章' },
+          { type: 'github', href: 'https://github.com/zxc7563598/php-bilibili-danmu', title: '前往GitHub' }
         ]
       },
       {
         name: '手机号归属地查询',
         description: '完全离线的手机号归属地查询桌面应用，适合在内网、单机、隔离环境下使用，内置 483,709 个号段​',
         links: [
-          { type: 'doc', href: '/blog/id81jf9d' },
-          { type: 'github', href: 'https://github.com/zxc7563598/go-mobile-locator' },
-          { type: 'release', href: 'https://github.com/zxc7563598/go-mobile-locator/releases' }
+          { type: 'doc', href: '/blog/id81jf9d', title: '查看文章' },
+          { type: 'github', href: 'https://github.com/zxc7563598/go-mobile-locator', title: '前往GitHub' },
+          { type: 'release', href: 'https://github.com/zxc7563598/go-mobile-locator/releases', title: '下载' }
         ]
       },
       {
         name: 'FinBoard',
         description: '基于 Go 实现的个人财务应用，支持账单记录、分类统计与数据分析',
         links: [
-          { type: 'doc', href: '/blog/d7285de6' },
-          { type: 'github', href: 'https://github.com/zxc7563598/fintrack-backend' },
-          { type: 'release', href: 'https://github.com/zxc7563598/fintrack-backend/releases' }
+          { type: 'doc', href: '/blog/d7285de6', title: '查看文章' },
+          { type: 'github', href: 'https://github.com/zxc7563598/fintrack-backend', title: '前往GitHub' },
+          { type: 'release', href: 'https://github.com/zxc7563598/fintrack-backend/releases', title: '下载' }
         ]
       },
       {
         name: 'Oh Shit Logger',
         description: '一个用 Go 编写的轻量级错误日志收集与分析网站，用来集中管理多个项目的异常',
         links: [
-          { type: 'doc', href: '/blog/23cf1f6b' },
-          { type: 'github', href: ' https://github.com/zxc7563598/oh-shit-logger' },
-          { type: 'release', href: ' https://github.com/zxc7563598/oh-shit-logger/releases' }
+          { type: 'doc', href: '/blog/23cf1f6b', title: '查看文章' },
+          { type: 'github', href: ' https://github.com/zxc7563598/oh-shit-logger', title: '前往GitHub' },
+          { type: 'release', href: ' https://github.com/zxc7563598/oh-shit-logger/releases', title: '下载' }
         ]
       },
       {
         name: 'Data Query Tool',
         description: '内网快速 SQL 查询工具，零依赖、免学习成本，非技术同事也能轻松自助查数据',
         links: [
-          { type: 'doc', href: '/blog/44994b49' },
-          { type: 'github', href: ' https://github.com/zxc7563598/data-query-tool' }
+          { type: 'doc', href: '/blog/44994b49', title: '查看文章' },
+          { type: 'github', href: ' https://github.com/zxc7563598/data-query-tool', title: '前往GitHub' }
         ]
       },
       {
         name: 'Avatar Service',
         description: '一个用 Go 写的随机头像生成服务，支持多种风格的头像生成(Identicon/Pixel)',
         links: [
-          { type: 'doc', href: '/blog/d94u5hht' },
-          { type: 'github', href: ' https://github.com/zxc7563598/avatar-service' },
-          { type: 'release', href: ' https://github.com/zxc7563598/avatar-service/releases' },
-          { type: 'site', href: '/projects/item/avatar-service' }
+          { type: 'doc', href: '/blog/d94u5hht', title: '查看文章' },
+          { type: 'github', href: ' https://github.com/zxc7563598/avatar-service', title: '前往GitHub' },
+          { type: 'release', href: ' https://github.com/zxc7563598/avatar-service/releases', title: '下载' },
+          { type: 'site', href: '/projects/item/avatar-service', title: '在线演示' }
         ]
       },
       {
         name: 'GitHub Webhook Listener',
-        description: '一个用于接收 GitHub Webhook 并执行 Shell 命令的轻量级 Go 服务',
+        description: '用于接收 GitHub Webhook 并执行 Shell 命令的轻量级 Go 服务，内置 Web 面板可查看项目运行状态与 Webhook 执行记录',
         links: [
-          { type: 'doc', href: '/blog/a9ee8nt5' },
-          { type: 'github', href: ' https://github.com/zxc7563598/github-webhook-listener' },
-          { type: 'release', href: ' https://github.com/zxc7563598/github-webhook-listener/releases' }
+          { type: 'doc', href: '/blog/a9ee8nt5', title: '查看文章' },
+          { type: 'github', href: ' https://github.com/zxc7563598/github-webhook-listener', title: '前往GitHub' },
+          { type: 'release', href: ' https://github.com/zxc7563598/github-webhook-listener/releases', title: '下载' }
         ]
       }
     ]}
@@ -120,8 +120,8 @@ const { sponsorship } = sponsorshipData
         description:
           '全国最新省市区划分数据，身份证号码解析地址，支持 Composer 安装与版本控制，适用于表单选项、数据校验、地址解析等场景',
         links: [
-          { type: 'github', href: 'https://github.com/zxc7563598/php-china-division' },
-          { type: 'site', href: '/composer/china-division' }
+          { type: 'github', href: 'https://github.com/zxc7563598/php-china-division', title: '前往GitHub' },
+          { type: 'site', href: '/composer/china-division', title: '在线演示' }
         ]
       },
       {
@@ -129,8 +129,8 @@ const { sponsorship } = sponsorshipData
         description:
           '基于国内号段规则的手机号码归属地查询库，支持运营商识别与地区定位，适用于注册验证、用户画像、数据归档等场景',
         links: [
-          { type: 'github', href: 'https://github.com/zxc7563598/php-mobile-locator' },
-          { type: 'site', href: '/composer/mobile-locator' }
+          { type: 'github', href: 'https://github.com/zxc7563598/php-mobile-locator', title: '前往GitHub' },
+          { type: 'site', href: '/composer/mobile-locator', title: '在线演示' }
         ]
       },
       {
@@ -138,9 +138,9 @@ const { sponsorship } = sponsorshipData
         description:
           '收货地址智能解析工具，支持从非结构化文本中提取姓名、手机号、身份证号、省市区、详细地址等字段，适用于电商、物流、CRM 等系统',
         links: [
-          { type: 'doc', href: '/blog/af605130' },
-          { type: 'github', href: 'https://github.com/zxc7563598/php-address-parser' },
-          { type: 'site', href: '/composer/address-parser' }
+          { type: 'doc', href: '/blog/af605130', title: '查看文章' },
+          { type: 'github', href: 'https://github.com/zxc7563598/php-address-parser', title: '前往GitHub' },
+          { type: 'site', href: '/composer/address-parser', title: '在线演示' }
         ]
       },
       {
@@ -148,17 +148,17 @@ const { sponsorship } = sponsorshipData
         description:
           '一款简洁易用的 PHP 八字排盘工具库，提供阳历与农历的相互转换、精准的节气时间计算、四柱排盘（八字）分析及五行推演等功能',
         links: [
-          { type: 'doc', href: '/blog/74ce4601' },
-          { type: 'github', href: 'https://github.com/zxc7563598/php-fortune-analyzer' },
-          { type: 'site', href: '/composer/fortune-analyzer' }
+          { type: 'doc', href: '/blog/74ce4601', title: '查看文章' },
+          { type: 'github', href: 'https://github.com/zxc7563598/php-fortune-analyzer', title: '前往GitHub' },
+          { type: 'site', href: '/composer/fortune-analyzer', title: '在线演示' }
         ]
       },
       {
         name: 'hejunjie/lazylog',
         description: '轻量级 PHP 日志库，提供本地日志安全写入以及异常信息远程上报（同步/异步）',
         links: [
-          { type: 'doc', href: '/blog/sd84uthv' },
-          { type: 'github', href: 'https://github.com/zxc7563598/php-lazylog' }
+          { type: 'doc', href: '/blog/sd84uthv', title: '查看文章' },
+          { type: 'github', href: 'https://github.com/zxc7563598/php-lazylog', title: '前往GitHub' }
         ]
       },
       {
@@ -166,23 +166,23 @@ const { sponsorship } = sponsorshipData
         description:
           '一个 灵活可扩展 的 PHP 促销策略引擎，让购物车的各种复杂促销逻辑（满减、打折、阶梯优惠、会员折扣…）实现更优雅、可维护',
         links: [
-          { type: 'doc', href: '/blog/bfc6fc' },
-          { type: 'github', href: 'https://github.com/zxc7563598/php-promotion-engine' }
+          { type: 'doc', href: '/blog/bfc6fc', title: '查看文章' },
+          { type: 'github', href: 'https://github.com/zxc7563598/php-promotion-engine', title: '前往GitHub' }
         ]
       },
       {
         name: 'hejunjie/bililive',
         description:
           'B站直播 WebSocket 连接的核心组件库，提供简洁的接口实现，包括登录、直播间信息流加密/解密、以及相关的关键方法',
-        links: [{ type: 'github', href: 'https://github.com/zxc7563598/php-bilibili-danmu-core' }]
+        links: [{ type: 'github', href: 'https://github.com/zxc7563598/php-bilibili-danmu-core', title: '前往GitHub' }]
       },
       {
         name: 'hejunjie/wechat-bill-parser',
         description:
           '一个高性能、自动化的微信账单解析器，支持压缩包密码自动破解与账单数据智能提取，适用于账单分析、账单自动化入账、个人理财工具开发等场景',
         links: [
-          { type: 'doc', href: '/blog/623bb7bf' },
-          { type: 'github', href: 'https://github.com/zxc7563598/php-wechat-bill-parser' }
+          { type: 'doc', href: '/blog/623bb7bf', title: '查看文章' },
+          { type: 'github', href: 'https://github.com/zxc7563598/php-wechat-bill-parser', title: '前往GitHub' }
         ]
       },
       {
@@ -190,8 +190,8 @@ const { sponsorship } = sponsorshipData
         description:
           '一个轻量、易用的 PHP 规则引擎，支持多条件组合、动态规则执行，适合业务规则判断、数据校验等场景',
         links: [
-          { type: 'doc', href: '/blog/da4e917a' },
-          { type: 'github', href: 'https://github.com/zxc7563598/php-simple-rule-engine' }
+          { type: 'doc', href: '/blog/da4e917a', title: '查看文章' },
+          { type: 'github', href: 'https://github.com/zxc7563598/php-simple-rule-engine', title: '前往GitHub' }
         ]
       },
       {
@@ -199,8 +199,8 @@ const { sponsorship } = sponsorshipData
         description:
           '一个灵活、可扩展的交易/利润分账组件，提供百分比、固定金额、阶梯与递归分账等内置策略，并支持注册自定义策略',
         links: [
-          { type: 'doc', href: '/blog/62e95bf2' },
-          { type: 'github', href: 'https://github.com/zxc7563598/php-trade-splitter' }
+          { type: 'doc', href: '/blog/62e95bf2', title: '查看文章' },
+          { type: 'github', href: 'https://github.com/zxc7563598/php-trade-splitter', title: '前往GitHub' }
         ]
       },
       {
@@ -208,8 +208,8 @@ const { sponsorship } = sponsorshipData
         description:
           '一个轻量级的 PHP 库，用来通过 RESTful API 调用 Milvus 向量数据库，可以用它来管理集合、插入数据，以及进行向量搜索',
         links: [
-          { type: 'doc', href: '/blog/9dff3f92' },
-          { type: 'github', href: 'https://github.com/zxc7563598/php-milvus' }
+          { type: 'doc', href: '/blog/9dff3f92', title: '查看文章' },
+          { type: 'github', href: 'https://github.com/zxc7563598/php-milvus', title: '前往GitHub' }
         ]
       },
       {
@@ -217,66 +217,66 @@ const { sponsorship } = sponsorshipData
         description:
           '一个简单且可扩展的 PHP 参数验证库，支持规则式定义与自定义扩展，适用于任何结构化数据校验场景',
         links: [
-          { type: 'doc', href: '/blog/a45e4e99' },
-          { type: 'github', href: 'https://github.com/zxc7563598/php-schema-validator' }
+          { type: 'doc', href: '/blog/a45e4e99', title: '查看文章' },
+          { type: 'github', href: 'https://github.com/zxc7563598/php-schema-validator', title: '前往GitHub' }
         ]
       },
       {
         name: 'hejunjie/google-authenticator',
         description:
           '一个用于生成和验证时间基础一次性密码（TOTP）的 PHP 包，支持 Google Authenticator 及类似应用',
-        links: [{ type: 'github', href: 'https://github.com/zxc7563598/php-google-authenticator' }]
+        links: [{ type: 'github', href: 'https://github.com/zxc7563598/php-google-authenticator', title: '前往GitHub' }]
       },
       {
         name: 'hejunjie/alipay-bill-parser',
         description:
           '一个高性能、自动化的支付宝账单解析器，支持压缩包密码自动破解与账单数据智能提取，适用于账单分析、账单自动化入账、个人理财工具开发等场景',
         links: [
-          { type: 'doc', href: '/blog/623bb7bf' },
-          { type: 'github', href: 'https://github.com/zxc7563598/php-alipay-bill-parser' }
+          { type: 'doc', href: '/blog/623bb7bf', title: '查看文章' },
+          { type: 'github', href: 'https://github.com/zxc7563598/php-alipay-bill-parser', title: '前往GitHub' }
         ]
       },
       {
         name: 'hejunjie/url-signer',
         description: '用于生成带签名和加密保护的URL链接的PHP工具包，适用于需要保护资源访问的场景',
-        links: [{ type: 'github', href: 'https://github.com/zxc7563598/php-url-signer' }]
+        links: [{ type: 'github', href: 'https://github.com/zxc7563598/php-url-signer', title: '前往GitHub' }]
       },
       {
         name: 'hejunjie/utils',
         description:
           '一个零碎但实用的 PHP 工具函数集合库。包含文件、字符串、数组、网络请求等常用函数的工具类集合，提升开发效率，适用于日常 PHP 项目辅助功能',
-        links: [{ type: 'github', href: 'https://github.com/zxc7563598/php-utils' }]
+        links: [{ type: 'github', href: 'https://github.com/zxc7563598/php-utils', title: '前往GitHub' }]
       },
       {
         name: 'hejunjie/cache',
         description:
           '基于装饰器模式实现的多层缓存系统，支持内存、文件、本地与远程缓存组合，提升缓存命中率，简化缓存管理逻辑',
         links: [
-          { type: 'doc', href: '/blog/78d10aa8' },
-          { type: 'github', href: 'https://github.com/zxc7563598/php-cache' }
+          { type: 'doc', href: '/blog/78d10aa8', title: '查看文章' },
+          { type: 'github', href: 'https://github.com/zxc7563598/php-cache', title: '前往GitHub' }
         ]
       },
       {
         name: 'hejunjie/id-generator',
         description: '轻量级 PHP ID 生成器，多策略高性能，可用于订单号、资源标识等场景',
         links: [
-          { type: 'doc', href: '/blog/697aafe5' },
-          { type: 'github', href: 'https://github.com/zxc7563598/php-id-generator' }
+          { type: 'doc', href: '/blog/697aafe5', title: '查看文章' },
+          { type: 'github', href: 'https://github.com/zxc7563598/php-id-generator', title: '前往GitHub' }
         ]
       },
       {
         name: 'hejunjie/encrypted-request',
         description: 'PHP 请求加密工具包，支持 AES 解密、签名与时间戳验证，快速实现前后端安全通信',
         links: [
-          { type: 'doc', href: '/blog/9634b05b' },
-          { type: 'github', href: 'https://github.com/zxc7563598/php-encrypted-request' }
+          { type: 'doc', href: '/blog/9634b05b', title: '查看文章' },
+          { type: 'github', href: 'https://github.com/zxc7563598/php-encrypted-request', title: '前往GitHub' }
         ]
       },
       {
         name: 'hejunjie/ip138',
         description:
           'PHP 封装的 IP138 API SDK, 简化 IP、手机号归属地、天气查询信息接口以及二维码生成接口调用',
-        links: [{ type: 'github', href: 'https://github.com/zxc7563598/php-ip138' }]
+        links: [{ type: 'github', href: 'https://github.com/zxc7563598/php-ip138', title: '前往GitHub' }]
       }
     ]}
   />
@@ -291,7 +291,8 @@ const { sponsorship } = sponsorshipData
         links: [
           {
             type: 'doc',
-            href: '/projects/item/finance'
+            href: '/projects/item/finance',
+            title: '查看文章'
           }
         ]
       }
